# scrapy_aosfatos

./: .gitignore  pyproject.toml  quotes.xml
scrapy_aosfatos/: main.py
tests/: test_scrapy.py
