[tool.poetry]
name = "scrapy_aosfatos"
version = "0.1.0"
description = ""
authors = ["Vinicius Maciel <vinimaciel01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
